[metadata]
name = EigenSample
version = 0.1.0
author = Rajan
author_email = rajanbit.email@gmail.com
description = Python package for generating synthetic samples in eigenspace to minimize distortion
long_description = file: README.md, LICENSE.txt
long_description_content_type = markdown/text
url = https://github.com/rajanbit/EigenSample
project_urls =
	Bug Tracker = https://github.com/rajanbit/EigenSample/issues
	repository = https://github.com/rajanbit/EigenSample
license = MIT License
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =	
	numpy >=1.26.4
	scikit-learn >=1.4.1
package_dir = 
	= src

[options.packages.find]
where = src
